--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="pt">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>agrosmart</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+    
+    <!-- PWA: Link para o manifesto -->
+    <link rel="manifest" href="/manifest.json">
+    
+    <!-- PWA: Cor da barra de topo no mobile -->
+    <meta name="theme-color" content="#3E6837" />
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+    <title>AgroSmart</title>
   </head>
   <body>
     <div id="root"></div>
