--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
             colors: {
               agro: {
                 bg: '#FDFDF5',
-                primary: '#3E6837',
+                green: '#3E6837',
                 border: '#E0E4D6',
                 darkBg: '#0A0A0A',
-                darkPrimary: '#4ade80',
+                darkGreen: '#4ade80',
                 darkBorder: '#262626'
               }
             },
@@ -86,7 +86,9 @@
     "recharts": "https://esm.sh/recharts@^3.7.0",
     "react-leaflet": "https://esm.sh/react-leaflet@^5.0.0",
     "leaflet": "https://esm.sh/leaflet@^1.9.4",
-    "mqtt": "https://esm.sh/mqtt@^5.15.0"
+    "mqtt": "https://esm.sh/mqtt@^5.15.0",
+    "jspdf": "https://esm.sh/jspdf@2.5.1",
+    "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2"
   }
 }
 </script>
