--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
     "mqtt": "https://esm.sh/mqtt@^5.15.0",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "jspdf-autotable": "https://esm.sh/jspdf-autotable@3.8.2"
+    "qrcode.react": "https://esm.sh/qrcode.react@^3.1.0"
   }
 }
 </script>
@@ -206,6 +207,7 @@
               'https://esm.sh/mqtt@^5.15.0',
               'https://esm.sh/jspdf@2.5.1',
               'https://esm.sh/jspdf-autotable@3.8.2'
+              
             ];
 
             self.addEventListener('install', (event) => {
