--- a/index.html
+++ b/index.html
@@ -272,89 +272,10 @@
 <body>
   <div id="root"></div>
   <script>
-    // ROBUST OFFLINE SERVICE WORKER GENERATION
-    // This creates a blob-based SW that aggressively caches all critical assets.
+    // Register Service Worker from /sw.js
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', () => {
-        const swCode = `
-            const CACHE_NAME = 'oriva-enterprise-v1-offline';
-            const URLS_TO_CACHE = [
-              '/',
-              '/index.html',
-              '/manifest.json',
-              'https://cdn.tailwindcss.com',
-              'https://unpkg.com/leaflet@1.9.4/dist/leaflet.css',
-              'https://esm.sh/react@^19.2.4',
-              'https://esm.sh/react-dom@^19.2.4',
-              'https://esm.sh/lucide-react@^0.563.0',
-              'https://esm.sh/recharts@^3.7.0',
-              'https://esm.sh/react-leaflet@^5.0.0',
-              'https://esm.sh/leaflet@^1.9.4',
-              'https://esm.sh/mqtt@^5.15.0',
-              'https://esm.sh/jspdf@2.5.1',
-              'https://esm.sh/jspdf-autotable@3.8.2'
-              
-            ];
-
-            self.addEventListener('install', (event) => {
-              // Perform install steps: Cache everything immediately
-              event.waitUntil(
-                caches.open(CACHE_NAME)
-                  .then((cache) => {
-                    console.log('[SW] Opened cache');
-                    return cache.addAll(URLS_TO_CACHE);
-                  })
-              );
-              self.skipWaiting();
-            });
-
-            self.addEventListener('activate', (event) => {
-              // Claim clients immediately so the app is controlled by SW right away
-              event.waitUntil(self.clients.claim());
-            });
-
-            self.addEventListener('fetch', (event) => {
-              // Cache-First Strategy for 100% Offline Capability
-              event.respondWith(
-                caches.match(event.request)
-                  .then((response) => {
-                    // Cache hit - return response
-                    if (response) {
-                      return response;
-                    }
-                    // Clone the request
-                    const fetchRequest = event.request.clone();
-
-                    return fetch(fetchRequest).then(
-                      (response) => {
-                        // Check if we received a valid response
-                        if(!response || response.status !== 200 || response.type !== 'basic' && response.type !== 'cors') {
-                          return response;
-                        }
-
-                        // Clone the response
-                        const responseToCache = response.clone();
-
-                        caches.open(CACHE_NAME)
-                          .then((cache) => {
-                            // Don't cache API calls to weather or mqtt (they change too often), handle them in app logic
-                            if (!event.request.url.includes('api.openweathermap.org') && !event.request.url.includes('mqtt')) {
-                               cache.put(event.request, responseToCache);
-                            }
-                          });
-
-                        return response;
-                      }
-                    );
-                  })
-              );
-            });
-          `;
-
-        const blob = new Blob([swCode], { type: 'application/javascript' });
-        const swUrl = URL.createObjectURL(blob);
-
-        navigator.serviceWorker.register(swUrl)
+        navigator.serviceWorker.register('/sw.js')
           .then(registration => {
             console.log('Oriva SW registered with scope: ', registration.scope);
           })
